--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.tricon</groupId>
-  <artifactId>appraisal-web-app</artifactId>
+  <artifactId>appraisal</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>appraisal-web-app Maven Webapp</name>
@@ -131,6 +131,6 @@
 </dependencies>
 
  <build>
-    <finalName>appraisal-web-app</finalName>
+    <finalName>appraisal</finalName>
   </build>
 </project>
